Fix overflow issue

--- a/css/app.css
+++ b/css/app.css
@@ -20,7 +20,7 @@ body {
 }
 
 body.fill {
-  height: 100%;
+  min-height: 100%;
 }
 
 main {
